# Runbound

./: .gitignore  AUDIT-PRINCIPLES.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CREDITS.md  Cargo.toml  LICENSE  METHODOLOGY.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  TRADEMARK.md  audit.toml  build.rs  deny.toml  install.sh  runbound.service  sbom.cdx.json  uninstall.sh
.agent-state/: v0.9-progress.md
.cargo/: config.toml
.gitea/workflows/: ci.yml  fuzz.yml  push-github.yml
.github/: git-workflow.md  logo.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
benchmark/corpus/: top-10000-domains.txt
docs/: AUDIT-SOUVERAINETE-2026-06-06.md  BUILD.md  FINDINGS.md  INSTALL.md  REVIEW-CHECKLIST.md  ROADMAP-SOUVERAINETE.md  anycast.md  api.md  audit.md  benchmark-2026-05-20.md  branding.md  code-audit.md  configuration.md  gdpr.md  ha.md  hardening.md  homelab.md  hsm.md  index.md  internals.md  pentest-2026-05-23.md  performance-issues.md  performance.md  philosophy.md  proxmox.md  public-resolver.md  quick-start.md  security-audit.md  security.md  sync.md  systemd.md  tls.md  troubleshooting.md  unbound-migration.md  web-ui.md  xdp.md
docs/architecture/: xdp-cache-unification.md
docs/bench-runs/: discrepancies.md
docs/bench-runs/agent/: v0.9.45_threadripper_server.md  v0.9.45_userspace.md
docs/benchmark/: BASELINE-bind9-9.20.23-threadripper-5995wx-2026-07-03.md  BASELINE-bind9-9.20.23-threadripper-5995wx-x510-2026-06-13.md  BASELINE-bind9-9.20.23-threadripper-5995wx-x520-2026-06-08.md  BASELINE-bind9-9.20.23-threadripper-5995wx-x520-2026-07-03.md  BASELINE-bind9-9.20.23-threadripper-5995wx-x710-2026-06-13.md  BASELINE-bind9-9.20.23-threadripper-5995wx-x710-2026-07-03.md  BASELINE-unbound-1.22.0-threadripper-5995wx-2026-07-03.md  BASELINE-unbound-1.22.0-threadripper-5995wx-x510-2026-06-13.md  BASELINE-unbound-1.22.0-threadripper-5995wx-x520-2026-06-08.md  BASELINE-unbound-1.22.0-threadripper-5995wx-x520-2026-07-03.md  BASELINE-unbound-1.22.0-threadripper-5995wx-x710-2026-06-13.md  BASELINE-unbound-1.22.0-threadripper-5995wx-x710-2026-07-03.md  INDEX.md  NOTES-dehickory-100k-2026-06-20.md  README.md  RUNBOUND-v0.15.3-threadripper-2026-06-07.md  RUNBOUND-v0.15.3-threadripper-dual-2026-06-07.md  RUNBOUND-v0.15.3-threadripper-single-2026-06-07.md  RUNBOUND-v0.15.3-threadripper-single-noxdp-2026-06-07.md  RUNBOUND-v0.16.0-threadripper-5995wx-x520-noxdp-2026-06-07.md  RUNBOUND-v0.16.0-threadripper-5995wx-x520-xdp-2026-06-07.md  RUNBOUND-v0.16.1-threadripper-5995wx-x520-noxdp-2026-06-07.md  RUNBOUND-v0.16.1-threadripper-5995wx-x520-xdp-2026-06-07.md  RUNBOUND-v0.16.11-threadripper-5995wx-x710-xdp-2026-06-10.md  RUNBOUND-v0.16.9-latitude-epyc9554p-bnxt-2026-06-10.md  RUNBOUND-v0.16.9-threadripper-5995wx-x710-xdp-2026-06-10.md  RUNBOUND-v0.17.2-latitude-epyc9554p-bnxt-2026-06-11.md  RUNBOUND-v0.17.2-latitude-epyc9554p-bnxt-dual-xdp-2026-06-11.md  RUNBOUND-v0.17.2-latitude-epyc9554p-bnxt-kernel617-2026-06-11.md  RUNBOUND-v0.17.2-latitude-epyc9554p-bnxt-noxdp-2026-06-11.md  RUNBOUND-v0.17.2-latitude-epyc9554p-bnxt-xdp-2026-06-11.md  RUNBOUND-v0.18.1-threadripper-5995wx-x510-noxdp-2026-06-13.md  RUNBOUND-v0.18.1-threadripper-5995wx-x510-xdp-2026-06-13.md  RUNBOUND-v0.18.1-threadripper-5995wx-x510x710-dual-xdp-2026-06-13.md  RUNBOUND-v0.18.1-threadripper-5995wx-x710-dual-xdp-2026-06-13.md  RUNBOUND-v0.18.1-threadripper-5995wx-x710-noxdp-2026-06-13.md  RUNBOUND-v0.18.1-threadripper-5995wx-x710-xdp-2026-06-13.md  RUNBOUND-v0.19.3-threadripper-5995wx-x510x710-dual-xdp-2026-06-15.md  RUNBOUND-v0.19.3-threadripper-5995wx-x710-dual-xdp-2026-06-15.md  RUNBOUND-v0.23.13-threadripper-5995wx-2026-07-03.md  (+21 more)
docs/benchmark/OLD/: BASELINE-bind9-9.20.23-threadripper-5995wx-x510-2026-06-13.md  BASELINE-bind9-9.20.23-threadripper-5995wx-x710-2026-06-13.md  NOTES-dehickory-100k-2026-06-20.md  (+9 more)
docs/config-examples/: benchmark.conf
docs/dev/: dehickory-plan.md
docs/img/: README.md
docs/security-audit/: AUDIT-2026-07-07-double-pass.md  AUDIT-2026-07-07-round2.md  CYCLE-O-dehickory-2026-06-22.md  PENTEST-2026-07-06.md  PENTEST-v0.15.1-2026-06-06.md  QMIN-231-2026-07-06.md  SECURITY-AUDIT.md  dehickory-feature-parity-2026-06-22.md  full-stack-validation-2026-06-22.md  pentest-aggressive-2026-06-22.md  v0.5.4-benchmark.md  v0.6.9-audit.md  v0.6.9-pentest.md  v0.6.9-remediation.md  v0.8.1-performance.md  v0.8.1-phase2.md  v0.8.1-reaudit.md  v0.8.1-vectors-tested.md  v0.9-icmp-webui.md  v0.9.1-icmp-webui.md  v0.9.10-audit.md  v0.9.15-audit.md  v0.9.15-perf-audit.md  v0.9.3-gemini.md  v0.9.3-prerelease.md  v0.9.38-audit.md  v0.9.4-remediation.md
docs/whitepaper/: 01-architecture.md  02-fast-path-xdp.md  03-simd-and-asm.md  04-slow-path.md  05-cache.md  06-control-plane.md  07-security.md  08-performance.md  09-design-decisions.md  10-appendices.md  README.md
ebpf/: dns_xdp.c
examples/: benchmark.conf  branding.conf  home.conf  master.conf  office.conf  postgres_collector.py  secure.conf  server.conf  slave.conf
examples/web-ui/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_api_json.rs  fuzz_config.rs  fuzz_dns_name.rs  fuzz_dns_query.rs
scripts/: aarch64-gnu-linker-wrapper
src/: acme.rs  alerts.rs  anycast.rs  audit.rs  blockpage.rs  caps_drop.rs  cpu.rs  domain_stats.rs  error.rs  hsm.rs  icmp.rs  integrity.rs  lib.rs  logbuffer.rs  main.rs  runtime.rs  ssrf.rs  stats.rs  store.rs  subnet_policy.rs  sync.rs  upstreams.rs  webhooks.rs
src/api/: clients.rs  mod.rs  relay.rs
src/config/: branding.rs  mod.rs  parser.rs  writer.rs
src/dns/: acl.rs  axfr.rs  cache_snapshot.rs  ddns.rs  dnssec_chain.rs  dnssec_denial.rs  dnssec_sign.rs  dnssec_verify.rs  doq.rs  forward.rs  hash.rs  hasher.rs  infra_cache.rs  kernel_loop.rs  local.rs  mod.rs  plain_server.rs  prefetch.rs  ratelimit.rs  recursor.rs  recursor_wire.rs  server.rs  simd.rs  tsig.rs  udp_server.rs  wire_bridge.rs  wire_builder.rs  wire_serve.rs  zone_signer.rs
src/feeds/: mod.rs
src/firewall/: backend.rs  mod.rs
src/multiuser/: mod.rs
src/webui/: index.html  mod.rs
(+30 files in other folders)
