[package]
name = "runbound-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_dns_query"
path = "fuzz_targets/fuzz_dns_query.rs"
test = false
doc = false

[[bin]]
name = "fuzz_config"
path = "fuzz_targets/fuzz_config.rs"
test = false
doc = false

[[bin]]
name = "fuzz_api_json"
path = "fuzz_targets/fuzz_api_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dns_name"
path = "fuzz_targets/fuzz_dns_name.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
runbound = { path = "..", features = ["fuzz"] }
hickory-proto = "0.26"
serde_json = "1"

[profile.release]
debug = 1
opt-level = 3
